src/objects/Lead_Round_Robin__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Lead_Field_Regions__c</fullName>
        <label>Lead Field Regions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Round_Robin_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Round Robin Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Round_Robin_Region__c</fullName>
        <label>Round Robin Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead Round Robin</label>
    <listViews>
        <fullName>Admin_View</fullName>
        <columns>NAME</columns>
        <columns>Lead_Field_Regions__c</columns>
        <columns>Round_Robin_Number__c</columns>
        <columns>Round_Robin_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>Admin View</label>
        <sharedTo>
            <role>VMT_SF_admin</role>
        </sharedTo>
    </listViews>
</CustomObject>